[error] 处理  symbol:   class BASE64Decoder link:https://www.codeprj.com/blog/bbab3d1.html